--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
